// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendCurrencyInputform should render input in fiat correctly 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  padding: 8px 12px 4px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c23 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c25 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 8px 12px 4px;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
  gap: 10px;
}

.c14 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c24 {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c7 {
  color: #FFFFFF;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c16 {
  color: #9B9B9B;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c9 {
  color: #FFFFFF;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c9:hover {
  opacity: 0.6;
}

.c9:active {
  opacity: 0.4;
}

.c21 {
  width: 100%;
  height: 1px;
  background-color: #FFFFFF12;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c18 {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.c26 {
  padding: 16px;
  width: 100%;
  line-height: 24px;
  font-weight: 535;
  text-align: center;
  border-radius: 16px;
  outline: none;
  border: 1px solid transparent;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  z-index: 1;
  will-change: transform;
  -webkit-transition: -webkit-transform 450ms ease;
  -webkit-transition: transform 450ms ease;
  transition: transform 450ms ease;
  -webkit-transform: perspective(1px) translateZ(0);
  -ms-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
}

.c26:disabled {
  opacity: 50%;
  cursor: auto;
  pointer-events: none;
}

.c26 > * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c26 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 {
  background-color: #1324EE;
  font-size: 20px;
  font-weight: 535;
  padding: 16px;
  color: #FFFFFF;
}

.c27:focus {
  box-shadow: 0 0 0 1pt #101fd8;
  background-color: #101fd8;
}

.c27:hover {
  background-color: #101fd8;
}

.c27:active {
  box-shadow: 0 0 0 1pt #0e1cc0;
  background-color: #0e1cc0;
}

.c27:disabled {
  background-color: #FFFFFF12;
  color: #9B9B9B;
  cursor: auto;
  box-shadow: none;
  border: 1px solid transparent;
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c1 {
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background-color: #FFFFFF12;
  font-size: initial;
}

.c2 {
  background-color: #131313;
  border-radius: 20px;
  outline: 1px solid #FFFFFF12;
  width: 100%;
  padding: 8px;
}

.c10 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c10:hover {
  opacity: 0.6;
}

.c10:active {
  opacity: 0.4;
}

.c12 {
  width: 100%;
  padding: 12px 16px;
  gap: 16px;
}

@media screen and (max-width:640px) {

}

@media screen and (max-width:768px) {

}

@media screen and (max-width:640px) {

}

<div
  class="c0 c1 c2"
  data-testid="send-review-modal"
>
  <div
    class="c3 c4"
    width="100%"
  >
    <div
      class="c5 c6"
    >
      <div
        class="c7 css-n8z49y"
      >
        Review send
      </div>
    </div>
    <div
      class="c5 c8"
    >
      <svg
        class="c9 c10"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
  <div
    class="c11 c12"
  >
    <div
      class="c13"
    >
      <div
        class="c5 c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16 css-1a4qi6e"
          >
            You're sending
          </div>
          <div
            class="c7 css-15popx1"
          >
            $1,000.00
          </div>
          <div
            class="c16 css-1a4qi6e"
          >
            100.00 DAI
          </div>
        </div>
        <div
          style="height: 36px;"
        >
          <div
            class="c17"
          >
            <img
              class="c18"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
            />
          </div>
        </div>
      </div>
      <div
        class="c5 c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16 css-1a4qi6e"
          >
            To
          </div>
          <div
            class="c7 css-15popx1"
          >
            <div
              class="c5 c19"
            >
              <div
                class="c7 css-15popx1"
              >
                hayden.eth
              </div>
            </div>
          </div>
          <div
            class="c16 css-1a4qi6e"
          >
            0x9984...9103
          </div>
        </div>
        <div
          style="height: 36px;"
        >
          <div
            class="c20"
          >
            <span>
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 36px; height: 36px; display: inline-block; background: rgb(200, 20, 83);"
              >
                <svg
                  height="36"
                  width="36"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#F29602"
                    height="36"
                    transform="translate(-1.3639893162257823 0.27350588462642744) rotate(171.3 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA6C00"
                    height="36"
                    transform="translate(7.665150362825969 -12.44820359430869) rotate(394.5 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FB1868"
                    height="36"
                    transform="translate(23.55150004628138 -6.949396678861342) rotate(445.6 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c21"
    />
    <div
      class="c22 c14"
      width="100%"
    >
      <div
        class="c16 css-1a4qi6e"
      >
        Network cost
      </div>
      <div
        class="c23 c24"
        width="min-content"
      >
        <svg
          aria-labelledby="titleID"
          height="16"
          style="width: 16px; height: 16px;"
          width="16"
        >
          <title
            id="titleID"
          >
            Ethereum logo
          </title>
          <rect
            fill="#1B1B1B"
            height="16"
            rx="4"
            width="16"
          />
          <rect
            fill="#6B8AFF33"
            height="16"
            rx="4"
            width="16"
          />
          <svg
            height="16"
            width="16"
          >
            ethereum.svg
          </svg>
        </svg>
        <div
          class="c7 css-142zc9n"
        >
          -
        </div>
      </div>
    </div>
  </div>
  <button
    class="c25 c26 c27"
  >
    Confirm send
  </button>
</div>
`;

exports[`SendCurrencyInputform should render input in token amount correctly 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
  padding: 8px 12px 4px;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c22 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 100%;
}

.c23 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
}

.c25 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: white;
  background-color: primary;
  border: 0;
  border-radius: 4px;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 8px 12px 4px;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
  gap: 10px;
}

.c14 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c19 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c24 {
  width: -webkit-min-content;
  width: -moz-min-content;
  width: min-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c7 {
  color: #FFFFFF;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c16 {
  color: #9B9B9B;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c9 {
  color: #FFFFFF;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c9:hover {
  opacity: 0.6;
}

.c9:active {
  opacity: 0.4;
}

.c21 {
  width: 100%;
  height: 1px;
  background-color: #FFFFFF12;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c18 {
  width: 36px;
  height: 36px;
  border-radius: 50%;
}

.c26 {
  padding: 16px;
  width: 100%;
  line-height: 24px;
  font-weight: 535;
  text-align: center;
  border-radius: 16px;
  outline: none;
  border: 1px solid transparent;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  z-index: 1;
  will-change: transform;
  -webkit-transition: -webkit-transform 450ms ease;
  -webkit-transition: transform 450ms ease;
  transition: transform 450ms ease;
  -webkit-transform: perspective(1px) translateZ(0);
  -ms-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
}

.c26:disabled {
  opacity: 50%;
  cursor: auto;
  pointer-events: none;
}

.c26 > * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c26 > a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 {
  background-color: #1324EE;
  font-size: 20px;
  font-weight: 535;
  padding: 16px;
  color: #FFFFFF;
}

.c27:focus {
  box-shadow: 0 0 0 1pt #101fd8;
  background-color: #101fd8;
}

.c27:hover {
  background-color: #101fd8;
}

.c27:active {
  box-shadow: 0 0 0 1pt #0e1cc0;
  background-color: #0e1cc0;
}

.c27:disabled {
  background-color: #FFFFFF12;
  color: #9B9B9B;
  cursor: auto;
  box-shadow: none;
  border: 1px solid transparent;
  outline: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 24px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c1 {
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  height: 36px;
  width: 36px;
  border-radius: 50%;
  background-color: #FFFFFF12;
  font-size: initial;
}

.c2 {
  background-color: #131313;
  border-radius: 20px;
  outline: 1px solid #FFFFFF12;
  width: 100%;
  padding: 8px;
}

.c10 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
}

.c10:hover {
  opacity: 0.6;
}

.c10:active {
  opacity: 0.4;
}

.c12 {
  width: 100%;
  padding: 12px 16px;
  gap: 16px;
}

@media screen and (max-width:640px) {

}

@media screen and (max-width:768px) {

}

@media screen and (max-width:640px) {

}

<div
  class="c0 c1 c2"
  data-testid="send-review-modal"
>
  <div
    class="c3 c4"
    width="100%"
  >
    <div
      class="c5 c6"
    >
      <div
        class="c7 css-n8z49y"
      >
        Review send
      </div>
    </div>
    <div
      class="c5 c8"
    >
      <svg
        class="c9 c10"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="18"
          x2="6"
          y1="6"
          y2="18"
        />
        <line
          x1="6"
          x2="18"
          y1="6"
          y2="18"
        />
      </svg>
    </div>
  </div>
  <div
    class="c11 c12"
  >
    <div
      class="c13"
    >
      <div
        class="c5 c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16 css-1a4qi6e"
          >
            You're sending
          </div>
          <div
            class="c7 css-15popx1"
          >
            1.00 DAI
          </div>
          <div
            class="c16 css-1a4qi6e"
          >
            $100.00
          </div>
        </div>
        <div
          style="height: 36px;"
        >
          <div
            class="c17"
          >
            <img
              class="c18"
              src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
            />
          </div>
        </div>
      </div>
      <div
        class="c5 c14"
      >
        <div
          class="c15"
        >
          <div
            class="c16 css-1a4qi6e"
          >
            To
          </div>
          <div
            class="c7 css-15popx1"
          >
            <div
              class="c5 c19"
            >
              <div
                class="c7 css-15popx1"
              >
                hayden.eth
              </div>
            </div>
          </div>
          <div
            class="c16 css-1a4qi6e"
          >
            0x9984...9103
          </div>
        </div>
        <div
          style="height: 36px;"
        >
          <div
            class="c20"
          >
            <span>
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 36px; height: 36px; display: inline-block; background: rgb(200, 20, 83);"
              >
                <svg
                  height="36"
                  width="36"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#F29602"
                    height="36"
                    transform="translate(-1.3639893162257823 0.27350588462642744) rotate(171.3 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA6C00"
                    height="36"
                    transform="translate(7.665150362825969 -12.44820359430869) rotate(394.5 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FB1868"
                    height="36"
                    transform="translate(23.55150004628138 -6.949396678861342) rotate(445.6 18 18)"
                    width="36"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c21"
    />
    <div
      class="c22 c14"
      width="100%"
    >
      <div
        class="c16 css-1a4qi6e"
      >
        Network cost
      </div>
      <div
        class="c23 c24"
        width="min-content"
      >
        <svg
          aria-labelledby="titleID"
          height="16"
          style="width: 16px; height: 16px;"
          width="16"
        >
          <title
            id="titleID"
          >
            Ethereum logo
          </title>
          <rect
            fill="#1B1B1B"
            height="16"
            rx="4"
            width="16"
          />
          <rect
            fill="#6B8AFF33"
            height="16"
            rx="4"
            width="16"
          />
          <svg
            height="16"
            width="16"
          >
            ethereum.svg
          </svg>
        </svg>
        <div
          class="c7 css-142zc9n"
        >
          -
        </div>
      </div>
    </div>
  </div>
  <button
    class="c25 c26 c27"
  >
    Confirm send
  </button>
</div>
`;
